--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,5 +13,6 @@ input[type = search] {
 	box-shadow: none;
 }
 .customFontStyle {
-	font-family: 'Noto Serif', serif !important;	
+	font-family: 'Noto Serif', serif !important;
+	margin-top: 30px;	
 }
